1.1.0
1. Added infinite shops
2. Fixed bugs
3. Changed code structure